more refnement of api / swagger / db
