# openapi.yml
@@ -46,7 +46,7 @@ paths:
       summary: "Add item to a cart"
       description: "Add an item to an existing cart"
       parameters:
-        - name: cartID
+        - name: cart_id
           in: header
           required: true
           description: Id of cart to add item to.
@@ -89,7 +89,7 @@ paths:
       summary: "Update a cart item"
       description: "Update a cart item's quantity and line item price"
       parameters:
-        - name: cartID
+        - name: cart_id
           in: header
           required: true
           description: Id of cart that has item to update.
@@ -134,7 +134,7 @@ paths:
       summary: "Delete a cart item"
       description: "Delete a cart item"
       parameters:
-        - name: cartID
+        - name: cart_id
           in: header
           required: true
           description: Id of cart that has item to delete.
@@ -155,14 +155,14 @@ paths:
           description: 200 Success
         400:
           description: 400 Bad request
-  /api/v1/cart/{cartID}:
+  /api/v1/cart/{cart_id}:
     get:
       tags: 
         - "cart"
       summary: "Get a cart by id"
       description: "Get a cart by cart id"
       parameters:
-        - name: cartID
+        - name: cart_id
           in: path
           required: true
           description: Id of cart to retrieve.
@@ -173,8 +173,6 @@ paths:
       responses:
         200:
           description: 200 Success
-        204:
-          description: 204 No Content
         400:
           description: 400 Bad request
   /api/v1/login:
@@ -231,7 +229,31 @@ paths:
       - "order"
       summary: "Create an order"
       description: "Create an order from a user's cart"
-      parameters: []
+      parameters:
+        - name: user_id
+          in: header
+          required: true
+          description: User id of cart.
+          schema:
+            type : integer
+            format: int64
+            example: 1
+        - name: cart_id
+          in: header
+          required: true
+          description: Cart id of cart.
+          schema:
+            type : integer
+            format: int64
+            example: 1
+        - name: total_price
+          in: header
+          required: true
+          description: Total price of order.
+          schema:
+            type : number
+            format: int64
+            example: 1.00
       responses:
         200:
           description: 200 Success
@@ -243,7 +265,7 @@ paths:
       summary: "Delete order"
       description: "Delete an order by id"
       parameters:
-        - name: orderID
+        - name: order_id
           in: header
           required: true
           description: Id of order to delete.
@@ -314,6 +336,12 @@ paths:
             type : number
             format: int64
             minimum: 0.00
+        - name: image_url
+          in: header
+          required: false
+          description: Link to image of product.
+          schema:
+            type : string
       responses:
         201:
           description: 201 Created
@@ -351,8 +379,13 @@ paths:
           description: Individual price of product to update.
           schema:
             type : number
-            format: int64
             minimum: 0.00
+        - name: image_url
+          in: header
+          required: false
+          description: Link to image of product.
+          schema:
+            type : string
       responses:
         200:
           description: 200 Success
@@ -496,7 +529,7 @@ paths:
       summary: "Delete a user"
       description: "Delete a user record from the database"
       parameters:
-        - name: userID
+        - name: user_id
           in: header
           required: true
           description: Id of user to delete from database.
